moving to JAVA 17